--- a/si/templates/articles/detail_article.html
+++ b/si/templates/articles/detail_article.html
@@ -1,11 +1,120 @@
 {% extends 'base.html' %}
 
 {% block titulo %}
-    Articulo
+    Tu articulo
 {% endblock %}
 
-{% block contenido_que_cambia %}
+{% block search %}
 
-    <h1>si {{object.title}}</h1>
+ <nav class="navbar navbar-expand-lg navbar-light bg-light">
+   <a class="navbar-brand" href="/">Salon del Gremio</a>
+   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+     <span class="navbar-toggler-icon"></span>
+   </button>
+ 
+   <div class="collapse navbar-collapse" id="navbarSupportedContent">
+     <ul class="navbar-nav mr-auto">
+       <li class="nav-item dropdown">
+         <a class="nav-link dropdown-toggle" href="#" role="button" data-toggle="dropdown" aria-expanded="false">
+           Tienda Magica
+         </a>
+         <div class="dropdown-menu">
+           <a class="dropdown-item active" href="/products/list/">Productos</a>
+           <a class="dropdown-item active" href="/products/create_product/">Nuevo producto</a>
+       </li>
+       <li class="nav-item dropdown">
+         <a class="nav-link dropdown-toggle" href="#" role="button" data-toggle="dropdown" aria-expanded="false">
+           Taberna del Gremio
+         </a>
+         <div class="dropdown-menu">
+           <a class="dropdown-item active" href="/characters/characters/">Tablon de Mercenarios</a>
+           <a class="dropdown-item active" href="/characters/create_character/">Nuevo aventurero</a>
+       </li>
+       <li class="nav-item dropdown">
+         <a class="nav-link dropdown-toggle" href="#" role="button" data-toggle="dropdown" aria-expanded="false">
+           La Biblioteca
+         </a>
+         <div class="dropdown-menu">
+           <a class="dropdown-item active" href="/blog/articles/">Guias</a>
+           <a class="dropdown-item active" href="/blog/create_article/">Nuevo Articulo</a>
+       </li>
+       <li class="nav-item active">
+         <a class="nav-link" href="/admin/" style="margin-right: 5rem ;">The Stick of = True  <span class="sr-only">(current)</span></a>
+       </li>
+               <li class="nav-item dropdown">
+         <a class="nav-link dropdown-toggle" href="#" role="button" data-toggle="dropdown" aria-expanded="false">
+           Otros
+         </a>
+         <div class="dropdown-menu">
+           {% if request.user.is_authenticated %}
+           <a class="dropdown-item active" href="/users/logout/">Salida</a>
+           {% else %}
+           <a class="dropdown-item active" href="/users/register/">Registro</a>
+           <a class="dropdown-item active" href="/users/login/">Acceso</a>
+           {% endif %}
+           <a class="dropdown-item active" href="/about-us/">Los Fundadores</a>
+       </li>
+     </ul>
+     <form class="form-inline my-2 my-lg-0" action="/blog/search_articles/" method="GET">
+       <input class="form-control mr-sm-2" type="search" placeholder="Buscar Articulos" aria-label="Search" name="search">
+       <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Buscar</button>
+     </form>
+   </div>
+ </nav>
+ 
+ {% endblock %}
 
-{% endblock %}
+{% block content %}
+
+<!DOCTYPE html>
+<html>
+<head>
+  <div class="card" style="width: 40rem;">
+    <style> 
+      .grid-container {
+         display: grid;
+         width: 800px;
+         height: 800px;
+         grid-template-rows: repeat(auto-fit, 100px);
+         grid-template-columns: repeat(auto-fit, 100px);
+         grid-gap: 5px;
+      }
+      
+      .grid-item1 {
+        background: grey;
+        text-align: center;
+        border: black 5px solid;
+        width: 100px;
+        height: 100px;
+      }
+
+      .grid-item2 {
+        background: grey;
+        text-align: center;
+        border: black 5px solid;
+      }
+    </style>
+</head>
+<body>
+  <div th:block class="md-2">
+    <div class="col">
+      <div class="card">
+        {% if article.image %}
+        <img src= "{{article.image.url}}" class="card-img-top" alt="...">
+        {% else %}
+        <img src= "https://i.pinimg.com/originals/6b/d1/f8/6bd1f8d7cfb9a97235022acf1546bad8.jpg" class="card-img-top" alt="...">
+        {% endif %}
+        <div class="card-body">
+          <h5 class="card-title">{{article.title}}</h5>
+          <p class="card-text">{{article.body}}</p>
+          <p class="card-text">Autor:"{{article.author}}"</p>
+          <p class="card-text">creado el {{article.date}}</p>
+          <a href="/blog/articles/{{article.pk}}/" class="btn btn-primary">Volver</a>
+          <a href="/blog/delete_article/{{article.id}}/" class="btn btn-danger">Eliminar</a>
+          <a href="/blog/update_article/{{article.id}}/" class="btn btn-primary">Editar</a>
+        </div>
+      </div>
+    </div>
+</body>
+
+  {% endblock %}
