--- a/si/templates/base.html
+++ b/si/templates/base.html
@@ -15,7 +15,7 @@
 </head>
 
 <body>
-  
+  {% block search %}
   <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <a class="navbar-brand" href="/">Salon del Gremio</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -65,13 +65,13 @@
             <a class="dropdown-item active" href="/about-us/">Los Fundadores</a>
         </li>
       </ul>
-      <form class="form-inline my-2 my-lg-0" action="/products/search_products/" method="GET">
+      <form class="form-inline my-2 my-lg-0" action="" method="GET">
         <input class="form-control mr-sm-2" type="search" placeholder="Buscar" aria-label="Search" name="search">
         <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Buscar</button>
       </form>
     </div>
   </nav>
-
+{% endblock %}
   {% block content %}
 
   {% endblock %}
