--- a/si/templates/characters/detail_character.html
+++ b/si/templates/characters/detail_character.html
@@ -1,11 +1,10 @@
+{% extends 'base.html' %}
 
-{% extends "base.html" %}
+{% block titulo %}
+    Tu aventurero
+{% endblock %}
 
-{% block title %}
-    Taverna del gremio
-  {% endblock %}
-
-  {% block search %}
+{% block search %}
 
   <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <a class="navbar-brand" href="/">Salon del Gremio</a>
@@ -67,7 +66,6 @@
  
  {% block content %}
 
-  {% for character in characters %}
   <!DOCTYPE html>
   <html>
   <head>
@@ -113,13 +111,11 @@
       <p class="card-text">Alineamiento: {{character.alineamiento}}</p>
       <p class="card-text">Edad: {{character.age}}</p>
       <p class="card-text">Nivel: {{character.lvl}}</p>
-      <a href="/characters/detail_character/{{character.pk}}/" class="btn btn-primary">Elegir</a>
+      <a href="/characters/characters/" class="btn btn-primary">Volver</a>
       <a href="/characters/delete_character/{{character.id}}/" class="btn btn-danger">Eliminar</a>
       <a href="/characters/update_character/{{character.id}}/" class="btn btn-primary">Editar</a>
     </div>
   </div>
 </body>
-  
-  {% endfor %}
 
   {% endblock %}
