--- a/si/templates/characters/search_characters.html
+++ b/si/templates/characters/search_characters.html
@@ -1,13 +1,73 @@
 {% extends "base.html" %}
 
 {% block title %}
-    Busqueda Productos
+    Buscar aventureros
+{% endblock %}
+
+{% block search %}
+
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
+  <a class="navbar-brand" href="/">Salon del Gremio</a>
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+
+  <div class="collapse navbar-collapse" id="navbarSupportedContent">
+    <ul class="navbar-nav mr-auto">
+      <li class="nav-item dropdown">
+        <a class="nav-link dropdown-toggle" href="#" role="button" data-toggle="dropdown" aria-expanded="false">
+          Tienda Magica
+        </a>
+        <div class="dropdown-menu">
+          <a class="dropdown-item active" href="/products/list/">Productos</a>
+          <a class="dropdown-item active" href="/products/create_product/">Nuevo producto</a>
+      </li>
+      <li class="nav-item dropdown">
+        <a class="nav-link dropdown-toggle" href="#" role="button" data-toggle="dropdown" aria-expanded="false">
+          Taberna del Gremio
+        </a>
+        <div class="dropdown-menu">
+          <a class="dropdown-item active" href="/characters/characters/">Tablon de Mercenarios</a>
+          <a class="dropdown-item active" href="/characters/create_character/">Nuevo aventurero</a>
+      </li>
+      <li class="nav-item dropdown">
+        <a class="nav-link dropdown-toggle" href="#" role="button" data-toggle="dropdown" aria-expanded="false">
+          La Biblioteca
+        </a>
+        <div class="dropdown-menu">
+          <a class="dropdown-item active" href="/blog/articles/">Guias</a>
+          <a class="dropdown-item active" href="/blog/create_article/">Nuevo Articulo</a>
+      </li>
+      <li class="nav-item active">
+        <a class="nav-link" href="/admin/" style="margin-right: 5rem ;">The Stick of = True  <span class="sr-only">(current)</span></a>
+      </li>
+              <li class="nav-item dropdown">
+        <a class="nav-link dropdown-toggle" href="#" role="button" data-toggle="dropdown" aria-expanded="false">
+          Otros
+        </a>
+        <div class="dropdown-menu">
+          {% if request.user.is_authenticated %}
+          <a class="dropdown-item active" href="/users/logout/">Salida</a>
+          {% else %}
+          <a class="dropdown-item active" href="/users/register/">Registro</a>
+          <a class="dropdown-item active" href="/users/login/">Acceso</a>
+          {% endif %}
+          <a class="dropdown-item active" href="/about-us/">Los Fundadores</a>
+      </li>
+    </ul>
+    <form class="form-inline my-2 my-lg-0" action="/characters/search_characters/" method="GET">
+      <input class="form-control mr-sm-2" type="search" placeholder="Buscar Aventureros" aria-label="Search" name="search">
+      <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Buscar</button>
+    </form>
+  </div>
+</nav>
+
 {% endblock %}
  
 {% block content %}
  
 
-{% for product in products %}
+{% for character in characters %}
 <!DOCTYPE html>
 <html>
 <head>
@@ -38,9 +98,10 @@
     </style>
 </head>
 <body>
-  
-    {% if product.image %}
-    <img src= "{{product.image.url}}" class="card-img-top" alt="...">
+
+<div class="card" style="width: 18rem;"></div>
+    {% if character.image %}
+    <img src= "{{character.image.url}}" class="card-img-top" alt="...">
     {% else %}
     <img src= "https://i.pinimg.com/originals/6b/d1/f8/6bd1f8d7cfb9a97235022acf1546bad8.jpg" class="card-img-top" alt="...">
     {% endif %}
@@ -52,6 +113,7 @@
       <p class="card-text">Alineamiento: {{character.alineamiento}}</p>
       <p class="card-text">Edad: {{character.age}}</p>
       <p class="card-text">Nivel: {{character.lvl}}</p>
+      <a href="/characters/detail_character/{{character.pk}}/" class="btn btn-primary">Elegir</a>
       <a href="/characters/delete_character/{{character.id}}/" class="btn btn-danger">Eliminar</a>
       <a href="/characters/update_character/{{character.id}}/" class="btn btn-primary">Editar</a>
     </div>
