--- a/si/templates/users/logout.html
+++ b/si/templates/users/logout.html
@@ -3,9 +3,107 @@
 {% block title %}
     Salida
 {% endblock %}
+
+{% block search %}
+
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
+  <a class="navbar-brand" href="/">Salon del Gremio</a>
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+
+  <div class="collapse navbar-collapse" id="navbarSupportedContent">
+    <ul class="navbar-nav mr-auto">
+      <li class="nav-item dropdown">
+        <a class="nav-link dropdown-toggle" href="#" role="button" data-toggle="dropdown" aria-expanded="false">
+          Tienda Magica
+        </a>
+        <div class="dropdown-menu">
+          <a class="dropdown-item active" href="/products/list/">Productos</a>
+          <a class="dropdown-item active" href="/products/create_product/">Nuevo producto</a>
+      </li>
+      <li class="nav-item dropdown">
+        <a class="nav-link dropdown-toggle" href="#" role="button" data-toggle="dropdown" aria-expanded="false">
+          Taberna del Gremio
+        </a>
+        <div class="dropdown-menu">
+          <a class="dropdown-item active" href="/characters/characters/">Tablon de Mercenarios</a>
+          <a class="dropdown-item active" href="/characters/create_character/">Nuevo aventurero</a>
+      </li>
+      <li class="nav-item dropdown">
+        <a class="nav-link dropdown-toggle" href="#" role="button" data-toggle="dropdown" aria-expanded="false">
+          La Biblioteca
+        </a>
+        <div class="dropdown-menu">
+          <a class="dropdown-item active" href="/blog/articles/">Guias</a>
+          <a class="dropdown-item active" href="/blog/create_article/">Nuevo Articulo</a>
+      </li>
+      <li class="nav-item active">
+        <a class="nav-link" href="/admin/" style="margin-right: 7rem ;">The Stick of = True  <span class="sr-only">(current)</span></a>
+      </li>
+        {% if request.user.is_authenticated %}
+      <li class="nav-item active">
+        <a class="nav-link" href="/users/logout/" style="margin-left: 10rem ;"> Salida  <span class="sr-only">(current)</span></a>
+      </li>
+      {% else %}
+      <li class="nav-item active">
+        <a class="nav-link" href="/users/register/"> Registrate  <span class="sr-only">(current)</span></a>
+      </li>
+    <li class="nav-item active">
+      <a class="nav-link" href="/users/login/"> Accede al Gremio <span class="sr-only">(current)</span></a>
+    </li>
+    {% endif %}
+    <li class="nav-item active">
+      <a class="nav-link" href="/about-us/"> Los Fundadores  <span class="sr-only">(current)</span></a>
+    </li>
+    </ul>
+  </div>
+</nav>
+
+{% endblock %}
  
 {% block content %}
 
-<h1>Hasta luego aventurero!</h1>
+<div class="card text-bg-dark">
+    <img src= "https://wallpaperset.com/w/full/8/a/7/16754.jpg" class="card-img-top" alt="...">
+    <div class="card-img-overlay">
+      
+      <center> <h5 class="card-title">¡Hasta luego aventurero!</h5> </center>
+      <center> <h5 class="card-title"> </h5> </center>
+      <center> <h5 class="card-title">Siempre te esperaremos de regreso con las puertas abiertas...</h5> </center>
+        <style>
+               
+         h5 {
+          font-size: 3.5rem;
+          text-transform: none;
+          color: rgb(255, 255, 255);
+          font-family: Helvetica, Georgia, monospace;
+          position: relative;
+          bottom: -100px;
+          text-shadow: 0.5px  0px 0px rgb(0, 0, 0),
+               0px  0.5px 0px rgb(0, 0, 0),
+              -0.5px  0px 0px rgb(0, 0, 0),
+               0px -0.5px 0px rgb(0, 0, 0)
+         }
+
+         h5 + p {
+          font-weight: bold;
+         }
+
+         p {
+          font-size: 2.0rem;
+          color: rgb(255, 255, 255);
+          font-family: Helvetica, Arial, sans-serif;
+          position: relative;
+          bottom: -200px;
+          text-shadow: 0.5px  0px 0px rgb(0, 0, 0),
+               0px  0.5px 0px rgb(0, 0, 0),
+              -0.5px  0px 0px rgb(0, 0, 0),
+               0px -0.5px 0px rgb(0, 0, 0)
+         }
+
+        </style>
+    </div>
+  </div>
 
 {% endblock %}
