--- a/si/templates/index.html
+++ b/si/templates/index.html
@@ -74,12 +74,12 @@
         <style>
                
          h5 {
-          font-size: 3.5rem;
+          font-size: 3rem;
           text-transform: none;
           color: rgb(255, 255, 255);
           font-family: Helvetica, Georgia, monospace;
           position: relative;
-          bottom: -100px;
+          bottom: -80px;
           text-shadow: 0.5px  0px 0px rgb(0, 0, 0),
                0px  0.5px 0px rgb(0, 0, 0),
               -0.5px  0px 0px rgb(0, 0, 0),
@@ -95,7 +95,7 @@
           color: rgb(255, 255, 255);
           font-family: Helvetica, Arial, sans-serif;
           position: relative;
-          bottom: -200px;
+          bottom: -120px;
           text-shadow: 0.5px  0px 0px rgb(0, 0, 0),
                0px  0.5px 0px rgb(0, 0, 0),
               -0.5px  0px 0px rgb(0, 0, 0),
@@ -109,6 +109,8 @@
       <center><p class="card-text">Dirigete a la taberna del gremio para conocer a los mejores aventureros, tal vez alguno te agrade para tu aventura</p></center>
       <p class="card-text"> </p>
       <center><p class="card-text">Ademas en nuestra biblioteca podras encontrar informacion util, especialmente guias para los miembros mas nuevos</p></center>
+      <p class="card-text"> </p>
+      <center><p class="card-text">En caso de que seas de los pocos elegidos por el poder de "The Stick of = True", podras editar, crear y borrar cualquier cosa...</p></center>
       <p class="card-text"> </p>
       {% if message %}
       <center><p class="card-text">Accediste con exito, ahora... {{message}}</p></center>
