--- a/si/templates/products/detail_product.html
+++ b/si/templates/products/detail_product.html
@@ -109,7 +109,7 @@
       <p class="card-text">Descripción del producto: {{product.description}}</p>
       <p class="card-text">Precio: {{product.price}}</p>
       <p class="card-text">Stock: {{product.stock}}</p>
-      <a href="/products/products/" class="btn btn-primary">Editar</a>
+      <a href="/products/list/" class="btn btn-primary">Volver</a>
       <a href="/products/delete_product/{{product.id}}/" class="btn btn-danger">Eliminar</a>
       <a href="/products/update_product/{{product.id}}/" class="btn btn-primary">Editar</a>
       
